# minecraft-bevy

./: AGENTS.md  Cargo.toml  FIXES.md  flake.nix
src/: main.rs  main_menu.rs
src/mob/: components.rs  mod.rs  systems.rs
src/player/: components.rs  inventory_ui.rs  mod.rs  resources.rs  settings_menu.rs  systems.rs
src/world/: components.rs  mod.rs  resources.rs  systems.rs
